Create Decision Draft on button Click, Delete Dead Dialog

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
@@ -24,9 +24,8 @@
   </ng-container>
 
   <ng-container matColumnDef="visibilityFlags">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by visibility">
+    <th mat-header-cell *matHeaderCellDef matTooltip='* = Pending' mat-sort-header sortActionDescription="Sort by visibility">
       Visibility
-      <div class="body-small">* = Pending</div>
     </th>
     <td mat-cell *matCellDef="let element">
       <span matTooltip="Applicant">A*, </span>
