--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="row">
-    <h3>Decisions > {{ isEdit ? 'Edit' : 'Create' }} Decision Draft</h3>
+    <h3>Decisions > Edit Decision Draft</h3>
   </div>
 
   <form (ngSubmit)="onSubmit()" [formGroup]="form">
