--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -1,14 +1,7 @@
 <div class="split">
   <h3>Decision</h3>
   <div matTooltip="{{ disabledCreateBtnTooltip }}" [matTooltipDisabled]="!isPaused && !isDraftExists">
-    <button
-      [disabled]="isPaused || isDraftExists"
-      mat-flat-button
-      color="primary"
-      [routerLink]="createDecision.path ? createDecision.path : './'"
-      routerLinkActive="active"
-      [routerLinkActiveOptions]="{ exact: false }"
-    >
+    <button [disabled]="isPaused || isDraftExists" mat-flat-button color="primary" (click)="onCreate()">
       + Create Draft Decision
     </button>
   </div>
