Update disabled style to match other form fields

--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -17,7 +17,8 @@
 }
 
 .desktop-file-drag-drop[ng-reflect-disabled='true'] {
-  background-color: #cbc9c9 !important;
+  background-color: rgba(colors.$grey, 0.2) !important;
+  cursor: not-allowed;
 }
 
 .mobile-file-drag-drop {
