Add disabled property to authorization letter upload area

--- a/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
@@ -129,6 +129,7 @@
       (deleteFile)="onRemoveFile($event)"
       [showErrors]="showErrors"
       [isRequired]="needsAuthorizationLetter || selectedThirdPartyAgent"
+      [disabled]="!needsAuthorizationLetter || !selectedThirdPartyAgent"
     ></app-file-drag-drop>
   </div>
 </section>
