crate/delete components

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-components/decision-component/decision-component.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-components/decision-component/decision-component.component.html
@@ -38,7 +38,7 @@
         bindLabel="label"
         bindValue="value"
         required
-        placeholder="AG Cap Source"
+        placeholder="AG Cap Source*"
         [clearable]="false"
       ></ng-select>
     </div>
