--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-components/decision-components.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-components/decision-components.component.html
@@ -3,6 +3,15 @@
     <h4>Decision Components</h4>
   </div>
 
+  <div class="component" *ngFor="let component of components; let index = index; trackBy: trackByFn">
+    <app-decision-component [(data)]="components[index]"></app-decision-component>
+    <div class="row">
+      <button type="button" class="remove-button" mat-stroked-button color="warn" (click)="onRemove(index)">
+        Remove Component
+      </button>
+    </div>
+  </div>
+
   <div class="row">
     <button type="button" [matMenuTriggerFor]="decisionComponentMenu" mat-stroked-button color="primary">
       ADD Decision component ▾
@@ -13,7 +22,7 @@
     <button
       *ngFor="let componentType of decisionComponentTypes"
       mat-menu-item
-      (click)="onAddNewCondition(componentType.code)"
+      (click)="onAddNewComponent(componentType.code)"
       [disabled]="componentType.isDisabled"
     >
       <div class="board-menu-item">
@@ -21,13 +30,4 @@
       </div>
     </button>
   </mat-menu>
-
-  <div class="component" *ngFor="let component of components; let index = index; trackBy: trackByFn">
-    <app-decision-component [(data)]="components[index]"></app-decision-component>
-    <div class="row">
-      <button type="button" class="remove-button" mat-stroked-button color="warn" (click)="onRemove(index)">
-        Remove Component
-      </button>
-    </div>
-  </div>
 </section>
