nfu support for component

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-components/decision-component/decision-component.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-components/decision-component/decision-component.component.html
@@ -55,4 +55,8 @@
       <input matInput id="agCapConsultant" matInput formControlName="agCapConsultant" />
     </mat-form-field>
   </div>
+
+  <div class="row-no-flex">
+    <app-nfu-input *ngIf="data.applicationDecisionComponentTypeCode === 'NFUP'" [form]="form"></app-nfu-input>
+  </div>
 </form>
