populate nfu fields

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-components/decision-components.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-components/decision-components.component.html
@@ -22,7 +22,7 @@
     <button
       *ngFor="let componentType of decisionComponentTypes"
       mat-menu-item
-      (click)="onAddNewComponent(componentType.code)"
+      (click)="onAddNewComponent(componentType.uiCode, componentType.code)"
       [disabled]="componentType.isDisabled"
     >
       <div class="board-menu-item">
