--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -186,6 +186,8 @@
       <app-decision-documents></app-decision-documents>
     </div>
 
+    <app-decision-components *ngIf="codes" [codes]="codes" [fileNumber]="fileNumber" [(components)]="components">
+    </app-decision-components>
     <div class="row">
       <h4>Audit and Chair Review Info</h4>
     </div>
@@ -215,6 +217,7 @@
           <mat-button-toggle value="false">Not Needed</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
+
       <mat-form-field
         *ngIf="form.get('chairReviewRequired')!.value === 'true'"
         appearance="outline"
