--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -32,56 +32,65 @@
         <span *ngIf="!decision.reconsideredBy?.length">N/A</span>
       </div>
     </div>
-    <input hidden type="file" #file (change)="attachFile(decision.uuid, $event)" placeholder="Upload file" />
-    <div class="decision-menu">
-      <button (click)="file.click()" matTooltip="Attach Document" mat-icon-button>
-        <mat-icon>attach_file</mat-icon>
-      </button>
-      <button (click)="onEdit(decision)" matTooltip="Edit Decision" mat-icon-button>
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button (click)="deleteDecision(decision.uuid)" matTooltip="Delete Decision" mat-icon-button>
-        <mat-icon>delete</mat-icon>
-      </button>
-    </div>
+
     <div class="decision-padding">
-      <div class="body-large">
-        Decision #{{ decisions.length - i }} -
-        <ng-container *ngIf="i === decisions.length - 1 && application">
-          <span class="days" matTooltip="Active Days">
-            <mat-icon class="icon">calendar_month</mat-icon>
-            {{ application.activeDays }}
-          </span>
-          <span class="days" matTooltip="Paused Days">
-            <mat-icon class="icon">pause</mat-icon>
-            {{ application.pausedDays }}
-          </span>
-          -
+      <div class="header">
+        <div class="body-large title">
+          Decision #{{ decisions.length - i }}
+          <div *ngIf="i === decisions.length - 1 && application">
+            <span class="days" matTooltip="Active Days">
+              <mat-icon class="icon">calendar_month</mat-icon>
+              {{ application.activeDays }}
+            </span>
+            <span class="days" matTooltip="Paused Days">
+              <mat-icon class="icon">pause</mat-icon>
+              {{ application.pausedDays }}
+            </span>
+          </div>
+
+          <ng-container *ngIf="!!decision.reconsiders">
+            <app-application-type-pill [type]="reconLabel"></app-application-type-pill>
+          </ng-container>
+          <ng-container *ngIf="!!decision.modifies">
+            <app-application-type-pill [type]="modificationLabel"></app-application-type-pill>
+          </ng-container>
+          <span>Res #{{ decision.resolutionNumber }}/{{ decision.resolutionYear }}</span>
+          <ng-container *ngIf="decision.isDraft"
+            ><app-application-type-pill [type]="dratDecisionLabel"></app-application-type-pill>
+          </ng-container>
+          <ng-container *ngIf="!decision.isDraft"
+          ><app-application-type-pill [type]="releasedDecisionLabel"></app-application-type-pill>
         </ng-container>
-        <ng-container *ngIf="!!decision.reconsiders">
-          <app-application-type-pill style="margin-left: -12px" [type]="reconLabel"></app-application-type-pill>
-          &nbsp;-
+        </div>
+        <ng-container *ngIf="decision.isDraft">
+          <button mat-stroked-button color="primary" (click)="onEdit(decision)">Edit</button>
         </ng-container>
-        <ng-container *ngIf="!!decision.modifies">
-          <app-application-type-pill style="margin-left: -12px" [type]="modificationLabel"></app-application-type-pill>
-          &nbsp;-
-        </ng-container>
-        <span>Res #{{ decision.resolutionNumber }}/{{ decision.resolutionYear }}</span>
+
+        <div
+          *ngIf="!decision.isDraft"
+          matTooltip="{{ disabledCreateBtnTooltip }}"
+          [matTooltipDisabled]="!isPaused && !isDraftExists"
+        >
+          <button mat-stroked-button color="primary" (click)="onEdit(decision)" [disabled]="isDraftExists">
+            Revert to draft
+          </button>
+        </div>
       </div>
-      <div class="decision-content">
+
+      <div class="decision-content grid-2">
         <div>
           <div class="subheading2">Decision Date</div>
           {{ decision.date | momentFormat }}
         </div>
         <div>
+          <div class="subheading2">Decision Maker</div>
+          {{ decision.decisionMaker ? decision.decisionMaker.label : '(Unset)' }}
+        </div>
+
+        <div>
           <div class="subheading2">Decision Outcome</div>
           {{ decision.outcome.label }} {{ decision.modifies?.linkedResolutions?.join(', ') }}
           {{ decision.reconsiders?.linkedResolutions?.join(', ') }}
-        </div>
-        <div></div>
-        <div>
-          <div class="subheading2">Decision Maker</div>
-          {{ decision.decisionMaker ? decision.decisionMaker.label : '(Unset)' }}
         </div>
         <div>
           <div *ngIf="decision.ceoCriterion" class="subheading2">CEO Criterion</div>
@@ -91,58 +100,104 @@
           <ng-container *ngIf="decision.isTimeExtension && decision.isOther">,&#32;</ng-container>
           <ng-container *ngIf="decision.isOther">Other</ng-container>
         </div>
-        <div></div>
-        <div *ngIf="decision.chairReviewRequired">
-          <div class="subheading2">Chair Review Date</div>
-          <span *ngIf="!decision.chairReviewDate">
-            <app-inline-datepicker (save)="onSaveChairReviewDate(decision.uuid, $event)"></app-inline-datepicker>
-          </span>
-          <span *ngIf="decision.chairReviewDate">{{ decision.chairReviewDate | momentFormat }}</span>
-        </div>
-        <div *ngIf="decision.chairReviewRequired">
-          <div class="subheading2">Chair Review Outcome</div>
-          <span *ngIf="decision.chairReviewOutcome !== null">{{ decision.chairReviewOutcome?.label }}</span>
-          <span *ngIf="decision.chairReviewOutcome === null">(Unset)</span>
-        </div>
-        <div *ngIf="decision.chairReviewRequired"></div>
+
         <div>
-          <div class="subheading2">Audit Date</div>
-          <span *ngIf="decision.auditDate">{{ decision.auditDate | momentFormat }}</span>
-          <span *ngIf="!decision.auditDate">
-            <app-inline-datepicker (save)="onSaveAuditDate(decision.uuid, $event)"></app-inline-datepicker>
-          </span>
+          <div class="subheading2">Subject To Conditions</div>
+          {{ decision.isSubjectToConditions ? 'Yes' : 'No' }}
+        </div>
+        <div>
+          <div class="subheading2">Decision Description</div>
+          {{ decision.decisionDescription ? decision.decisionDescription : 'No Data' }}
+        </div>
+
+        <div>
+          <div class="subheading2">Days To Hide From Public</div>
+          {{ decision.daysHideFromPublic ? decision.daysHideFromPublic : 'No Data' }}
+        </div>
+        <div>
+          <div class="subheading2">Stats Required</div>
+          {{ decision.isStatsRequired ? 'Yes' : 'No' }}
         </div>
       </div>
-      <div class="body-large">Documents</div>
-      <div class="decision-documents">
-        <div class="subheading2">File Name</div>
-        <div class="subheading2">File Upload Date</div>
-        <div class="subheading2">File Actions</div>
-        <div *ngIf="!decision.documents.length" class="no-files">No Documents</div>
-        <ng-container *ngFor="let document of decision.documents">
-          <div>
-            <a (click)="openFile(decision.uuid, document.uuid, document.fileName)">{{ document.fileName }}</a>
-          </div>
-          <div>{{ document.uploadedAt | momentFormat }}</div>
-          <div class="file-actions">
-            <button
-              matTooltip="Download File"
-              mat-icon-button
-              (click)="downloadFile(decision.uuid, document.uuid, document.fileName)"
-            >
-              <mat-icon>download</mat-icon>
-            </button>
-            <button
-              matTooltip="Delete File"
-              class="delete-file-icon"
-              mat-icon-button
-              (click)="deleteFile(decision.uuid, document.uuid, document.fileName)"
-            >
-              <mat-icon>delete</mat-icon>
-            </button>
-          </div>
-        </ng-container>
+      <div class="decision-documents decision-content">
+        <app-decision-documents [editable]="false" [inputDocuments]="decision.documents"></app-decision-documents>
       </div>
+
+      <!-- Components -->
+      <div class="decision-content">
+        <div class="row">
+          <h5>Decision Components and Conditions</h5>
+        </div>
+
+        <div *ngFor="let component of decision.components">
+          <div class="body-large decision-content">
+            {{ component.applicationDecisionComponentType?.label }} Component
+          </div>
+          <div class="decision-content grid-3">
+            <div>
+              <div class="subheading2">ALR Area Impacted (ha)</div>
+              {{ component.alrArea }}
+            </div>
+            <div>
+              <div class="subheading2">Agri Cap</div>
+              {{ component.agCap }}
+            </div>
+            <div>
+              <div class="subheading2">Agri Cap Source</div>
+              {{ component.agCapSource }}
+            </div>
+
+            <div>
+              <div class="subheading2">Non-Farm Use Type</div>
+              {{ component.nfuType }}
+            </div>
+            <div>
+              <div class="subheading2">Non-Farm Use Sub-Type</div>
+              {{ component.nfuSubType }}
+            </div>
+            <div>
+              <div class="subheading2">Use End Date</div>
+              {{ component.nfuEndDate }}
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="decision-content">
+        <h1 class="body-large">Conditions</h1>
+        <div>
+          <a href="#">View Conditions<mat-icon class="conditions-link-icon">link</mat-icon></a>
+        </div>
+      </div>
+
+      <div class="decision-content">
+        <div class="body-large">Audit and Chair Review Info</div>
+        <div class="decision-content grid-3">
+          <div>
+            <div class="subheading2">Audit Date</div>
+            <span *ngIf="decision.auditDate">{{ decision.auditDate | momentFormat }}</span>
+            <span *ngIf="!decision.auditDate">
+              <app-inline-datepicker (save)="onSaveAuditDate(decision.uuid, $event)"></app-inline-datepicker>
+            </span>
+          </div>
+          <div *ngIf="decision.chairReviewRequired">
+            <div class="subheading2">Chair Review Date</div>
+            <span *ngIf="!decision.chairReviewDate">
+              <app-inline-datepicker (save)="onSaveChairReviewDate(decision.uuid, $event)"></app-inline-datepicker>
+            </span>
+            <span *ngIf="decision.chairReviewDate">{{ decision.chairReviewDate | momentFormat }}</span>
+          </div>
+          <div *ngIf="decision.chairReviewRequired">
+            <div class="subheading2">Chair Review Outcome</div>
+            <span *ngIf="decision.chairReviewOutcome !== null">{{ decision.chairReviewOutcome?.label }}</span>
+            <span *ngIf="decision.chairReviewOutcome === null">No Data</span>
+          </div>
+        </div>
+      </div>
+
+      <ng-container *ngIf="decision.isDraft">
+        <button mat-stroked-button color="warn" (click)="deleteDecision(decision.uuid)">Delete draft decision</button>
+      </ng-container>
     </div>
   </div>
 </section>
