Add linking of Conditions to Components

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-condition/decision-condition.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-condition/decision-condition.component.html
@@ -16,14 +16,13 @@
     <ng-select
       appearance="outline"
       class="grid-half-2"
-      [items]="codes"
+      [items]="selectableComponents"
       formControlName="componentToCondition"
       appendTo="body"
       bindLabel="label"
-      bindValue="code"
+      bindValue="tempId"
       required
       placeholder="Component to Condition*"
-      [clearable]="false"
     ></ng-select>
 
     <div class="grid-1">
