--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -48,6 +48,13 @@ a {
   flex-direction: column;
   align-items: center;
   padding: 1rem 2rem 2rem;
+
+  // Remove button element default styling
+  background: none;
+  border: none;
+  font-weight: unset;
+  text-transform: unset;
+  width: 100%;
 }
 
 .uploaded-file {
