Rename some fields
* Make Pending default instead of Proceed
* Slightly change form order for Recons / Modifications

--- a/alcs-frontend/src/app/features/application/post-decision/edit-modification-dialog/edit-modification-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/edit-modification-dialog/edit-modification-dialog.component.html
@@ -37,8 +37,8 @@
         <mat-label class="toggle-label">Review Outcome <span>*</span></mat-label>
         <mat-button-toggle-group id="reviewOutcomeCode" formControlName="reviewOutcomeCode" name="reviewOutcomeCode">
           <mat-button-toggle value="PEN">Pending</mat-button-toggle>
-          <mat-button-toggle value="PRC">Proceed</mat-button-toggle>
-          <mat-button-toggle value="REF">Refuse</mat-button-toggle>
+          <mat-button-toggle value="PRC">Proceed to Modify</mat-button-toggle>
+          <mat-button-toggle value="REF">Refuse to Modify</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
     </div>
