--- a/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
@@ -41,8 +41,8 @@
         <mat-label class="toggle-label">Review Outcome <span>*</span></mat-label>
         <mat-button-toggle-group id="reviewOutcomeCode" formControlName="reviewOutcomeCode" name="reviewOutcomeCode">
           <mat-button-toggle value="PEN">Pending</mat-button-toggle>
-          <mat-button-toggle value="PRC">Proceed</mat-button-toggle>
-          <mat-button-toggle value="REF">Refuse</mat-button-toggle>
+          <mat-button-toggle value="PRC">Proceed to Reconsider</mat-button-toggle>
+          <mat-button-toggle value="REF">Refuse to Reconsider</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
 
@@ -55,7 +55,12 @@
         appearance="outline"
         class="date-picker full-grid-line"
       >
-        <mat-label>Review Date</mat-label>
+        <mat-label>
+          Outcome Notification Date
+          <mat-icon matTooltip="The date that the applicant/affected party is notified of the review outcome">
+            info
+          </mat-icon>
+        </mat-label>
         <input
           matInput
           (click)="reviewDatePicker.open()"
