--- a/alcs-frontend/src/app/features/board/dialogs/reconsiderations/create/create-reconsideration-dialog.html
+++ b/alcs-frontend/src/app/features/board/dialogs/reconsiderations/create/create-reconsideration-dialog.html
@@ -40,7 +40,7 @@
         </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline">
-        <mat-label>Applicant Last Name</mat-label>
+        <mat-label>Applicant Name</mat-label>
         <input
           matInput
           id="applicant"
