--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -1,203 +1,225 @@
-<div class="split">
-  <h3>Decision</h3>
-  <div matTooltip="{{ disabledCreateBtnTooltip }}" [matTooltipDisabled]="!isPaused && !isDraftExists">
-    <button [disabled]="isPaused || isDraftExists" mat-flat-button color="primary" (click)="onCreate()">
-      + Create Draft Decision
-    </button>
-  </div>
-</div>
+<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start" class="decision-tabs">
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <h3>Decision</h3>
+    </ng-template>
+    <ng-container *ngTemplateOutlet="decisionsList"></ng-container>
+  </mat-tab>
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <h3>Condition Compliance</h3>
+    </ng-template>
+    This is conditions
+  </mat-tab>
+</mat-tab-group>
 
-<section class="no-decisions" *ngIf="!decisions.length">
-  <div>No Decisions</div>
-</section>
-<section class="decision-container" *ngFor="let decision of decisions; let i = index">
-  <div class="loading-overlay" *ngIf="decision.loading">
-    <mat-spinner></mat-spinner>
-  </div>
-  <div
-    class="decision"
-    [ngClass]="{
-      'has-post-decisions': decision.modifiedBy?.length || decision.reconsideredBy?.length
-    }"
-  >
-    <div *ngIf="decision.modifiedBy?.length || decision.reconsideredBy?.length" class="post-decisions body1-text">
-      <div>
-        <strong>Modified&nbsp;By:&nbsp;</strong>
-        {{ decision.modifiedByResolutions.join(', ') }}
-        <span *ngIf="!decision.modifiedBy?.length">N/A</span>
-      </div>
-      <div>
-        <strong>Reconsidered&nbsp;By:&nbsp;</strong>
-        {{ decision.reconsideredByResolutions.join(', ') }}
-        <span *ngIf="!decision.reconsideredBy?.length">N/A</span>
+<ng-template #decisionsList>
+  <section style="padding: 0 8px">
+    <div class="split">
+      <div></div>
+      <div matTooltip="{{ disabledCreateBtnTooltip }}" [matTooltipDisabled]="!isPaused && !isDraftExists">
+        <button [disabled]="isPaused || isDraftExists" mat-flat-button color="primary" (click)="onCreate()">
+          + Create Draft Decision
+        </button>
       </div>
     </div>
-
-    <div class="decision-padding">
-      <div class="header">
-        <div class="body-large title">
-          Decision #{{ decisions.length - i }}
-          <div *ngIf="i === decisions.length - 1 && application">
-            <span class="days" matTooltip="Active Days">
-              <mat-icon class="icon">calendar_month</mat-icon>
-              {{ application.activeDays }}
-            </span>
-            <span class="days" matTooltip="Paused Days">
-              <mat-icon class="icon">pause</mat-icon>
-              {{ application.pausedDays }}
-            </span>
-          </div>
-
-          <ng-container *ngIf="!!decision.reconsiders">
-            <app-application-type-pill [type]="reconLabel"></app-application-type-pill>
-          </ng-container>
-          <ng-container *ngIf="!!decision.modifies">
-            <app-application-type-pill [type]="modificationLabel"></app-application-type-pill>
-          </ng-container>
-          <span>Res #{{ decision.resolutionNumber }}/{{ decision.resolutionYear }}</span>
-          <ng-container *ngIf="decision.isDraft"
-            ><app-application-type-pill [type]="dratDecisionLabel"></app-application-type-pill>
-          </ng-container>
-          <ng-container *ngIf="!decision.isDraft"
-          ><app-application-type-pill [type]="releasedDecisionLabel"></app-application-type-pill>
-        </ng-container>
-        </div>
-        <ng-container *ngIf="decision.isDraft">
-          <button mat-stroked-button color="primary" (click)="onEdit(decision)">Edit</button>
-        </ng-container>
-
-        <div
-          *ngIf="!decision.isDraft"
-          matTooltip="{{ disabledCreateBtnTooltip }}"
-          [matTooltipDisabled]="!isPaused && !isDraftExists"
-        >
-          <button mat-stroked-button color="primary" (click)="onEdit(decision)" [disabled]="isDraftExists">
-            Revert to draft
-          </button>
-        </div>
+    <section class="no-decisions" *ngIf="!decisions.length">
+      <div>No Decisions</div>
+    </section>
+    <section class="decision-container" *ngFor="let decision of decisions; let i = index">
+      <div class="loading-overlay" *ngIf="decision.loading">
+        <mat-spinner></mat-spinner>
       </div>
-
-      <div class="decision-content grid-2">
-        <div>
-          <div class="subheading2">Decision Date</div>
-          {{ decision.date | momentFormat }}
-        </div>
-        <div>
-          <div class="subheading2">Decision Maker</div>
-          {{ decision.decisionMaker ? decision.decisionMaker.label : '(Unset)' }}
-        </div>
-
-        <div>
-          <div class="subheading2">Decision Outcome</div>
-          {{ decision.outcome.label }} {{ decision.modifies?.linkedResolutions?.join(', ') }}
-          {{ decision.reconsiders?.linkedResolutions?.join(', ') }}
-        </div>
-        <div>
-          <div *ngIf="decision.ceoCriterion" class="subheading2">CEO Criterion</div>
-          {{ decision.ceoCriterion?.label }}
-          <ng-container *ngIf="decision.isTimeExtension || decision.isOther">&#32;-&#32;</ng-container>
-          <ng-container *ngIf="decision.isTimeExtension">Time extension</ng-container>
-          <ng-container *ngIf="decision.isTimeExtension && decision.isOther">,&#32;</ng-container>
-          <ng-container *ngIf="decision.isOther">Other</ng-container>
-        </div>
-
-        <div>
-          <div class="subheading2">Subject To Conditions</div>
-          {{ decision.isSubjectToConditions ? 'Yes' : 'No' }}
-        </div>
-        <div>
-          <div class="subheading2">Decision Description</div>
-          {{ decision.decisionDescription ? decision.decisionDescription : 'No Data' }}
-        </div>
-
-        <div>
-          <div class="subheading2">Days To Hide From Public</div>
-          {{ decision.daysHideFromPublic ? decision.daysHideFromPublic : 'No Data' }}
-        </div>
-        <div>
-          <div class="subheading2">Stats Required</div>
-          {{ decision.isStatsRequired ? 'Yes' : 'No' }}
-        </div>
-      </div>
-      <div class="decision-documents decision-content">
-        <app-decision-documents [editable]="false" [inputDocuments]="decision.documents"></app-decision-documents>
-      </div>
-
-      <!-- Components -->
-      <div class="decision-content">
-        <div class="row">
-          <h5>Decision Components and Conditions</h5>
-        </div>
-
-        <div *ngFor="let component of decision.components">
-          <div class="body-large decision-content">
-            {{ component.applicationDecisionComponentType?.label }} Component
-          </div>
-          <div class="decision-content grid-3">
-            <div>
-              <div class="subheading2">ALR Area Impacted (ha)</div>
-              {{ component.alrArea }}
-            </div>
-            <div>
-              <div class="subheading2">Agri Cap</div>
-              {{ component.agCap }}
-            </div>
-            <div>
-              <div class="subheading2">Agri Cap Source</div>
-              {{ component.agCapSource }}
-            </div>
-
-            <div>
-              <div class="subheading2">Non-Farm Use Type</div>
-              {{ component.nfuType }}
-            </div>
-            <div>
-              <div class="subheading2">Non-Farm Use Sub-Type</div>
-              {{ component.nfuSubType }}
-            </div>
-            <div>
-              <div class="subheading2">Use End Date</div>
-              {{ component.nfuEndDate }}
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="decision-content">
-        <h1 class="body-large">Conditions</h1>
-        <div>
-          <a href="#">View Conditions<mat-icon class="conditions-link-icon">link</mat-icon></a>
-        </div>
-      </div>
-
-      <div class="decision-content">
-        <div class="body-large">Audit and Chair Review Info</div>
-        <div class="decision-content grid-3">
+      <div
+        class="decision"
+        [ngClass]="{
+          'has-post-decisions': decision.modifiedBy?.length || decision.reconsideredBy?.length
+        }"
+      >
+        <div *ngIf="decision.modifiedBy?.length || decision.reconsideredBy?.length" class="post-decisions body1-text">
           <div>
-            <div class="subheading2">Audit Date</div>
-            <span *ngIf="decision.auditDate">{{ decision.auditDate | momentFormat }}</span>
-            <span *ngIf="!decision.auditDate">
-              <app-inline-datepicker (save)="onSaveAuditDate(decision.uuid, $event)"></app-inline-datepicker>
-            </span>
+            <strong>Modified&nbsp;By:&nbsp;</strong>
+            {{ decision.modifiedByResolutions.join(', ') }}
+            <span *ngIf="!decision.modifiedBy?.length">N/A</span>
           </div>
-          <div *ngIf="decision.chairReviewRequired">
-            <div class="subheading2">Chair Review Date</div>
-            <span *ngIf="!decision.chairReviewDate">
-              <app-inline-datepicker (save)="onSaveChairReviewDate(decision.uuid, $event)"></app-inline-datepicker>
-            </span>
-            <span *ngIf="decision.chairReviewDate">{{ decision.chairReviewDate | momentFormat }}</span>
-          </div>
-          <div *ngIf="decision.chairReviewRequired">
-            <div class="subheading2">Chair Review Outcome</div>
-            <span *ngIf="decision.chairReviewOutcome !== null">{{ decision.chairReviewOutcome?.label }}</span>
-            <span *ngIf="decision.chairReviewOutcome === null">No Data</span>
+          <div>
+            <strong>Reconsidered&nbsp;By:&nbsp;</strong>
+            {{ decision.reconsideredByResolutions.join(', ') }}
+            <span *ngIf="!decision.reconsideredBy?.length">N/A</span>
           </div>
         </div>
-      </div>
 
-      <ng-container *ngIf="decision.isDraft">
-        <button mat-stroked-button color="warn" (click)="deleteDecision(decision.uuid)">Delete draft decision</button>
-      </ng-container>
-    </div>
-  </div>
-</section>
+        <div class="decision-padding">
+          <div class="header">
+            <div class="body-large title">
+              Decision #{{ decisions.length - i }}
+              <div *ngIf="i === decisions.length - 1 && application">
+                <span class="days" matTooltip="Active Days">
+                  <mat-icon class="icon">calendar_month</mat-icon>
+                  {{ application.activeDays }}
+                </span>
+                <span class="days" matTooltip="Paused Days">
+                  <mat-icon class="icon">pause</mat-icon>
+                  {{ application.pausedDays }}
+                </span>
+              </div>
+
+              <ng-container *ngIf="!!decision.reconsiders">
+                <app-application-type-pill [type]="reconLabel"></app-application-type-pill>
+              </ng-container>
+              <ng-container *ngIf="!!decision.modifies">
+                <app-application-type-pill [type]="modificationLabel"></app-application-type-pill>
+              </ng-container>
+              <span>Res #{{ decision.resolutionNumber }}/{{ decision.resolutionYear }}</span>
+              <ng-container *ngIf="decision.isDraft"
+                ><app-application-type-pill [type]="dratDecisionLabel"></app-application-type-pill>
+              </ng-container>
+              <ng-container *ngIf="!decision.isDraft"
+                ><app-application-type-pill [type]="releasedDecisionLabel"></app-application-type-pill>
+              </ng-container>
+            </div>
+            <ng-container *ngIf="decision.isDraft">
+              <button mat-stroked-button color="primary" (click)="onEdit(decision)">Edit</button>
+            </ng-container>
+
+            <div
+              *ngIf="!decision.isDraft"
+              matTooltip="{{ disabledCreateBtnTooltip }}"
+              [matTooltipDisabled]="!isPaused && !isDraftExists"
+            >
+              <button mat-stroked-button color="primary" (click)="onEdit(decision)" [disabled]="isDraftExists">
+                Revert to draft
+              </button>
+            </div>
+          </div>
+
+          <div class="decision-content grid-2">
+            <div>
+              <div class="subheading2">Decision Date</div>
+              {{ decision.date | momentFormat }}
+            </div>
+            <div>
+              <div class="subheading2">Decision Maker</div>
+              {{ decision.decisionMaker ? decision.decisionMaker.label : '(Unset)' }}
+            </div>
+
+            <div>
+              <div class="subheading2">Decision Outcome</div>
+              {{ decision.outcome.label }} {{ decision.modifies?.linkedResolutions?.join(', ') }}
+              {{ decision.reconsiders?.linkedResolutions?.join(', ') }}
+            </div>
+            <div>
+              <div *ngIf="decision.ceoCriterion" class="subheading2">CEO Criterion</div>
+              {{ decision.ceoCriterion?.label }}
+              <ng-container *ngIf="decision.isTimeExtension || decision.isOther">&#32;-&#32;</ng-container>
+              <ng-container *ngIf="decision.isTimeExtension">Time extension</ng-container>
+              <ng-container *ngIf="decision.isTimeExtension && decision.isOther">,&#32;</ng-container>
+              <ng-container *ngIf="decision.isOther">Other</ng-container>
+            </div>
+
+            <div>
+              <div class="subheading2">Subject To Conditions</div>
+              {{ decision.isSubjectToConditions ? 'Yes' : 'No' }}
+            </div>
+            <div>
+              <div class="subheading2">Decision Description</div>
+              {{ decision.decisionDescription ? decision.decisionDescription : 'No Data' }}
+            </div>
+
+            <div>
+              <div class="subheading2">Days To Hide From Public</div>
+              {{ decision.daysHideFromPublic ? decision.daysHideFromPublic : 'No Data' }}
+            </div>
+            <div>
+              <div class="subheading2">Stats Required</div>
+              {{ decision.isStatsRequired ? 'Yes' : 'No' }}
+            </div>
+          </div>
+          <div class="decision-documents decision-content">
+            <app-decision-documents [editable]="false" [decision]="decision"></app-decision-documents>
+          </div>
+
+          <!-- Components -->
+          <div class="decision-content">
+            <div class="row">
+              <h5>Decision Components and Conditions</h5>
+            </div>
+
+            <div *ngFor="let component of decision.components">
+              <div class="body-large decision-content">
+                {{ component.applicationDecisionComponentType?.label }} Component
+              </div>
+              <div class="decision-content grid-3">
+                <div>
+                  <div class="subheading2">ALR Area Impacted (ha)</div>
+                  {{ component.alrArea }}
+                </div>
+                <div>
+                  <div class="subheading2">Agri Cap</div>
+                  {{ component.agCap }}
+                </div>
+                <div>
+                  <div class="subheading2">Agri Cap Source</div>
+                  {{ component.agCapSource }}
+                </div>
+
+                <div>
+                  <div class="subheading2">Non-Farm Use Type</div>
+                  {{ component.nfuType }}
+                </div>
+                <div>
+                  <div class="subheading2">Non-Farm Use Sub-Type</div>
+                  {{ component.nfuSubType }}
+                </div>
+                <div>
+                  <div class="subheading2">Use End Date</div>
+                  {{ component.nfuEndDate }}
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="decision-content">
+            <h1 class="body-large">Conditions</h1>
+            <div>
+              <a href="#" (click)="onNavigateToConditions()"
+                >View Conditions<mat-icon class="conditions-link-icon">link</mat-icon></a
+              >
+            </div>
+          </div>
+
+          <div class="decision-content">
+            <div class="body-large">Audit and Chair Review Info</div>
+            <div class="decision-content grid-3">
+              <div>
+                <div class="subheading2">Audit Date</div>
+                <span *ngIf="decision.auditDate">{{ decision.auditDate | momentFormat }}</span>
+                <span *ngIf="!decision.auditDate">
+                  <app-inline-datepicker (save)="onSaveAuditDate(decision.uuid, $event)"></app-inline-datepicker>
+                </span>
+              </div>
+              <div *ngIf="decision.chairReviewRequired">
+                <div class="subheading2">Chair Review Date</div>
+                <span *ngIf="!decision.chairReviewDate">
+                  <app-inline-datepicker (save)="onSaveChairReviewDate(decision.uuid, $event)"></app-inline-datepicker>
+                </span>
+                <span *ngIf="decision.chairReviewDate">{{ decision.chairReviewDate | momentFormat }}</span>
+              </div>
+              <div *ngIf="decision.chairReviewRequired">
+                <div class="subheading2">Chair Review Outcome</div>
+                <span *ngIf="decision.chairReviewOutcome !== null">{{ decision.chairReviewOutcome?.label }}</span>
+                <span *ngIf="decision.chairReviewOutcome === null">No Data</span>
+              </div>
+            </div>
+          </div>
+
+          <ng-container *ngIf="decision.isDraft">
+            <button mat-stroked-button color="warn" (click)="deleteDecision(decision.uuid)">
+              Delete draft decision
+            </button>
+          </ng-container>
+        </div>
+      </div>
+    </section>
+  </section>
+</ng-template>
