--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
@@ -1,9 +1,5 @@
 @use '../../../../../styles/colors';
 
-// h3 {
-//   margin-bottom: 24px !important;
-// }
-
 section {
   margin-bottom: 64px;
 }
@@ -47,22 +43,6 @@ section {
   background: colors.$accent-color;
   box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0 4px 0 10px;
-
-  //   button {
-  //     color: colors.$white;
-  //     width: 36px;
-  //     height: 36px;
-  //     line-height: 36px;
-  //   }
-
-  //   mat-icon {
-  //     position: absolute;
-  //     top: 8px;
-  //     left: 8px;
-  //     font-size: 21px;
-  //     width: 20px;
-  //     height: 36px;
-  //   }
 }
 
 .decision-padding {
@@ -126,26 +106,6 @@ section {
 .conditions-link-icon {
   position: absolute;
 }
-// .decision-documents {
-//   margin-top: 4px;
-//   display: grid;
-//   grid-template-columns: 1fr 1fr 100px;
-//   grid-row-gap: 4px;
-
-//   div {
-//     display: flex;
-//     align-items: center;
-//     font-size: 16px !important;
-//   }
-// }
-
-// .file-actions {
-//   margin-left: -12px;
-// }
-
-// .delete-file-icon {
-//   color: colors.$error-color;
-// }
 
 .no-decisions {
   margin-top: 16px;
@@ -170,15 +130,13 @@ section {
   .application-pill {
     margin-right: 0 !important;
   }
-}
 
-// .no-files {
-//   grid-column: 1/4;
-//   margin-top: 16px;
-//   padding: 16px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   text-align: center;
-//   background-color: colors.$grey-light;
-// }
+  .decision-tabs {
+    .mdc-tab__text-label {
+      color: colors.$black !important;
+    }
+    .mdc-tab {
+      margin-left: 8px;
+    }
+  }
+}
