Add Confirmation Dialog when removing files in Portal Edit Mode

--- a/portal-frontend/src/app/features/alcs-edit-submission/alcs-edit-submission.component.html
+++ b/portal-frontend/src/app/features/alcs-edit-submission/alcs-edit-submission.component.html
@@ -107,6 +107,7 @@
         [$applicationSubmission]="$applicationSubmission"
         [$applicationDocuments]="$applicationDocuments"
         [showErrors]="showValidationErrors"
+        [draftMode]="true"
         (navigateToStep)="switchStep($event)"
         (exit)="onExit()"
       ></app-roso-proposal>
@@ -115,6 +116,7 @@
         [$applicationSubmission]="$applicationSubmission"
         [$applicationDocuments]="$applicationDocuments"
         [showErrors]="showValidationErrors"
+        [draftMode]="true"
         (navigateToStep)="switchStep($event)"
         (exit)="onExit()"
       ></app-pofo-proposal>
@@ -123,6 +125,7 @@
         [$applicationSubmission]="$applicationSubmission"
         [$applicationDocuments]="$applicationDocuments"
         [showErrors]="showValidationErrors"
+        [draftMode]="true"
         (navigateToStep)="switchStep($event)"
         (exit)="onExit()"
       ></app-pfrs-proposal>
