--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-details.component.html
@@ -23,6 +23,7 @@
     </mat-expansion-panel-header>
 
     <app-parcel-entry
+      [isDraft]='draftMode'
       [parcel]="parcel"
       [$owners]="$owners"
       [fileId]="fileId"
