--- a/portal-frontend/src/app/features/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
@@ -331,7 +331,7 @@
         id="proposal-map"
         [uploadedFiles]="proposalMap"
         (uploadFiles)="attachFile($event, DOCUMENT.PROPOSAL_MAP)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
@@ -347,7 +347,7 @@
         id="cross-section"
         [uploadedFiles]="crossSections"
         (uploadFiles)="attachFile($event, DOCUMENT.CROSS_SECTIONS)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
@@ -367,7 +367,7 @@
         id="reclamation-plan"
         [uploadedFiles]="reclamationPlan"
         (uploadFiles)="attachFile($event, DOCUMENT.RECLAMATION_PLAN)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
@@ -447,7 +447,7 @@
         id="noticeOfWork"
         [uploadedFiles]="noticeOfWork"
         (uploadFiles)="attachFile($event, DOCUMENT.NOTICE_OF_WORK)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
