--- a/portal-frontend/src/app/features/edit-submission/proposal/subd-proposal/subd-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/subd-proposal/subd-proposal.component.html
@@ -183,7 +183,7 @@
         id="proposal-map"
         [uploadedFiles]="proposalMap"
         (uploadFiles)="attachFile($event, DOCUMENT.PROPOSAL_MAP)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
@@ -229,7 +229,7 @@
         id="ownership"
         [uploadedFiles]="homesiteSeverance"
         (uploadFiles)="attachFile($event, DOCUMENT.HOMESITE_SEVERANCE)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
