--- a/portal-frontend/src/app/features/edit-submission/proposal/tur-proposal/tur-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/tur-proposal/tur-proposal.component.html
@@ -166,7 +166,7 @@
       id="proof-of-serving"
       [uploadedFiles]="servingNotice"
       (uploadFiles)="attachFile($event, DOCUMENT.SERVING_NOTICE)"
-      (deleteFile)="deleteFile($event)"
+      (deleteFile)="onDeleteFile($event)"
       (openFile)="openFile($event)"
       [showErrors]="showErrors"
       [isRequired]="true"
@@ -178,7 +178,7 @@
       id="proposal-map"
       [uploadedFiles]="proposalMap"
       (uploadFiles)="attachFile($event, DOCUMENT.PROPOSAL_MAP)"
-      (deleteFile)="deleteFile($event)"
+      (deleteFile)="onDeleteFile($event)"
       (openFile)="openFile($event)"
       [showErrors]="showErrors"
       [isRequired]="true"
