--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -238,6 +238,7 @@
       </button>
       <div>
         <app-parcel-owners
+          [isDraft]='isDraft'
           [fileId]="fileId"
           [submissionUuid]="submissionUuid"
           [parcelUuid]="parcel.uuid"
