--- a/portal-frontend/src/app/features/edit-submission/proposal/pofo-proposal/pofo-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/pofo-proposal/pofo-proposal.component.html
@@ -286,7 +286,7 @@
         id="proposal-map"
         [uploadedFiles]="proposalMap"
         (uploadFiles)="attachFile($event, DOCUMENT.PROPOSAL_MAP)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
@@ -302,7 +302,7 @@
         id="cross-section"
         [uploadedFiles]="crossSections"
         (uploadFiles)="attachFile($event, DOCUMENT.CROSS_SECTIONS)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
@@ -322,7 +322,7 @@
         id="reclamation-plan"
         [uploadedFiles]="reclamationPlan"
         (uploadFiles)="attachFile($event, DOCUMENT.RECLAMATION_PLAN)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
