--- a/portal-frontend/src/app/features/edit-submission/proposal/roso-proposal/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/roso-proposal/roso-proposal.component.html
@@ -254,7 +254,7 @@
         id="proposal-map"
         [uploadedFiles]="proposalMap"
         (uploadFiles)="attachFile($event, DOCUMENT.PROPOSAL_MAP)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
@@ -270,7 +270,7 @@
         id="cross-section"
         [uploadedFiles]="crossSections"
         (uploadFiles)="attachFile($event, DOCUMENT.CROSS_SECTIONS)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
@@ -290,7 +290,7 @@
         id="reclamation-plan"
         [uploadedFiles]="reclamationPlan"
         (uploadFiles)="attachFile($event, DOCUMENT.RECLAMATION_PLAN)"
-        (deleteFile)="deleteFile($event)"
+        (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
