--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
@@ -24,8 +24,9 @@
   </ng-container>
 
   <ng-container matColumnDef="visibilityFlags">
-    <th mat-header-cell *matHeaderCellDef matTooltip='* = Pending' mat-sort-header sortActionDescription="Sort by visibility">
+    <th mat-header-cell *matHeaderCellDef matTooltip="* = Pending">
       Visibility
+      <div class="subheading">* = Pending</div>
     </th>
     <td mat-cell *matCellDef="let element">
       <span matTooltip="Applicant">A*, </span>
