--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.html
@@ -24,7 +24,7 @@
   </ng-container>
 
   <ng-container matColumnDef="visibilityFlags">
-    <th mat-header-cell *matHeaderCellDef matTooltip="* = Pending">
+    <th mat-header-cell *matHeaderCellDef>
       Visibility
       <div class="subheading">* = Pending</div>
     </th>
