--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.scss
@@ -29,6 +29,7 @@ table {
   th {
     font-weight: 700;
     padding-bottom: 16px;
+    position: relative;
 
     .subheading {
       font-size: 11px;
