--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -183,7 +183,7 @@
     </mat-form-field>
 
     <div>
-      <app-decision-documents></app-decision-documents>
+      <app-decision-documents (beforeDocumentUpload)="onSubmit(true, true)"></app-decision-documents>
     </div>
 
     <app-decision-components
