--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.scss
@@ -22,3 +22,20 @@
 a {
   word-break: break-all;
 }
+
+table {
+  box-shadow: none;
+
+  th {
+    font-weight: 700;
+    padding-bottom: 16px;
+    position: relative;
+
+    .subheading {
+      font-size: 11px;
+      line-height: 16px;
+      font-weight: 400;
+      position: absolute;
+    }
+  }
+}
