--- a/portal-frontend/src/app/features/view-submission/alc-review/submission-documents/submission-documents.component.html
+++ b/portal-frontend/src/app/features/view-submission/alc-review/submission-documents/submission-documents.component.html
@@ -4,7 +4,7 @@
     <ng-container matColumnDef='type'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription='Sort by type'>Type</th>
       <td mat-cell *matCellDef='let element'>
-        {{ element.type.label }}
+        {{ element.type?.label }}
       </td>
     </ng-container>
 
