Portal interaction and scroll fixes (#611)
* Scroll app type description into view to improve ux

* Fix toast overlay from blocking stepper and buttons

* DIsable remove owner function from dropdown

* Collapse panel when no other parcels and fix form reset on cancel

* Open desktop file finder by clicking anywhere in upload area

* Change clickable area to button element for wcag

* Refactor function to scroll to page element

* Use scroll helper in rest of portal

--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -204,11 +204,16 @@
           [formControl]="ownerInput"
         />
         <mat-autocomplete #auto="matAutocomplete">
-          <mat-option (click)="onSelectOwner(option, option.isSelected)" *ngFor="let option of filteredOwners">
+          <mat-option
+            (click)="onSelectOwner(option, option.isSelected)"
+            *ngFor="let option of filteredOwners"
+            [disabled]="option.isSelected"
+          >
             <div class="owner-option">
               <div>{{ option.displayName }}</div>
-              <button *ngIf="!option.isSelected" mat-flat-button color="primary">Add</button>
-              <button *ngIf="option.isSelected" mat-stroked-button color="primary">Added</button>
+              <button mat-flat-button color="primary" [disabled]="option.isSelected">
+                {{ option.isSelected ? 'Added' : 'Add' }}
+              </button>
             </div>
           </mat-option>
           <mat-option class="option" *ngIf="filteredOwners.length === 0 && enableAddNewOwner" (click)="onAddNewOwner()">
@@ -278,11 +283,16 @@
           [formControl]="ownerInput"
         />
         <mat-autocomplete #auto="matAutocomplete">
-          <mat-option (click)="onSelectOwner(option, option.isSelected)" *ngFor="let option of filteredOwners">
+          <mat-option
+            (click)="onSelectOwner(option, option.isSelected)"
+            *ngFor="let option of filteredOwners"
+            [disabled]="option.isSelected"
+          >
             <div class="owner-option">
               <div>{{ option.displayName }}</div>
-              <button *ngIf="!option.isSelected" mat-flat-button color="primary">Add</button>
-              <button *ngIf="option.isSelected" mat-stroked-button color="primary">Added</button>
+              <button mat-flat-button color="primary" [disabled]="option.isSelected">
+                {{ option.isSelected ? 'Added' : 'Add' }}
+              </button>
             </div>
           </mat-option>
           <mat-option
