--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -25,21 +25,18 @@
 </div>
 <div
   *ngIf="!uploadedFiles.length || allowMultiple"
-  class=""
   [ngClass]="{ 'desktop-file-drag-drop': true, 'error-outline': isRequired && showErrors && !uploadedFiles.length }"
   dragDropFile
   [disabled]="disabled"
   (files)="filesDropped($event)"
 >
-  <div class="content">
+  <button class="content" type="button" (click)="onFileUploadClicked()">
     <div class="icon">
       <mat-icon inline="true">file_upload</mat-icon>
     </div>
-    <button [disabled]="disabled" type="button" (click)="onFileUploadClicked()" mat-flat-button color="accent">
-      Choose file to Upload
-    </button>
+    <button [disabled]="disabled" type="button" mat-flat-button color="accent">Choose file to Upload</button>
     <div class="drag-text">or drag and drop them here</div>
-  </div>
+  </button>
 </div>
 <button
   [disabled]="disabled"
