--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-condition/decision-condition.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-condition/decision-condition.component.scss
@@ -4,27 +4,27 @@
   grid-column-gap: 24px;
   grid-row-gap: 24px;
 
-  .grid-1 {
+  .condition-grid-1 {
     grid-column: 1/3;
   }
 
-  .grid-2 {
+  .condition-grid-2 {
     grid-column: 3/5;
   }
 
-  .grid-3 {
+  .condition-grid-3 {
     grid-column: 5/7;
   }
 
-  .grid-half-1 {
+  .condition-grid-half-1 {
     grid-column: 1/4;
   }
 
-  .grid-half-2 {
+  .condition-grid-half-2 {
     grid-column: 4/7;
   }
 
-  .full-width {
+  .condition-full-width {
     grid-column: 1/7;
   }
 }
