--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
@@ -6,13 +6,17 @@
     display: grid;
     grid-template-columns: calc(50% - 12px) calc(50% - 12px);
     grid-column-gap: 24px;
-    grid-row-gap: 24px;
+    grid-row-gap: 32px;
+
+    .full-width {
+      grid-column: 1/3;
+    }
   }
 
   .grid-3 {
     grid-template-columns: calc(33% - 8px) calc(33% - 8px) calc(33% - 8px);
     grid-column-gap: 24px;
-    grid-row-gap: 24px;
+    grid-row-gap: 32px;
   }
 
   .resolution-number-wrapper {
